# arxiv-research-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/: PROMPTS.md  config.toml  quickstart.py  with_claude.py  with_gemini.py  with_openai.py
examples/topics/: cryptography.toml  distributed-systems.toml  machine-learning.toml  quantitative-biology.toml
src/arxiv_research_mcp/: __init__.py  __main__.py  arxiv.py  config.py  pipeline.py  prompts.py  security.py  server.py
tests/: test_arxiv.py  test_config.py  test_pipeline.py  test_prompts.py  test_security.py  test_server.py
